# AppImageKit

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AppRun.c  CMakeCache.txt  CMakeLists.txt  CNAME  CONTRIBUTING.md  COPYING  Dockerfile  LICENSE  Makefile  Makefile.runtime  README  README-md  README.md  ROADMAP.md  appimaged.c  appimaged.ctl  appimagetool.c  appimagetoolglib.c  babel.cfg  binreloc.c  binreloc.h  bintray.sh  build-appdir.sh  build-appdirs.sh  build-appimage.sh  build-dialog.sh  build-embeddable-runtime.sh  build-multiarch.sh  build-runtime.sh  build-runtime.sh.in  build-tool-osx.sh  build.sh  cmake_install.cmake  config.h  create-appdir  desktopintegration  (+44 more)
.deps/: fuseiso.Po  fuseiso.Tpo  isofs.Po  isofs.Tpo
.github/workflows/: build.yml
AppDirAssistant.AppDir/: .DirIcon  README.md  appimager.desktop
AppImageAssistant.AppDir/: AppImageAssistant  AppImageAssistant.desktop  AppRun  README.md  checkglibc  colors.py  dialogs.py  extract  package  portability.py  testappimage  unionfs-fuse  xdgappdir.py
AppImageAssistant.AppDir/xdg/: BaseDirectory.py  Config.py  DesktopEntry.py  Exceptions.py  IconTheme.py  IniFile.py  Locale.py  Menu.py  MenuEditor.py  Mime.py  RecentFiles.py
AppImageExtract.AppDir/: AppImageExtract.desktop  README.md
AppImageMonitor.AppDir/: AppImageMonitor.desktop  README.md
AppImageUpdate.AppDir/: AppRun  README.md  appimagesync.desktop  appimageupdate.desktop
LibcWrapGenerator/: CMakeLists.txt  LibcWrapGenerator.vala  README  cc
appimagetool/: .DirIcon  appimagetool  appimagetool.c
appimageupdategui/: README.md  build.sh  com.appimageupdate.policy  main.vala  progress.vala  root.vala
appimageupdategui/ui/: menu.ui  progress.ui
apt-appdir/: README.md  apt-appdir  apt-appdir-serverside  portability.py
apt-appdir.AppDir/: apt-appdir  apt-appdir-serverside  curl  dpkg-deb  status
artwork/: CREDITS
binary-dependencies/: bundle
binary-dependencies/armv6l/: README
binary-dependencies/armv7l/: README  libburn.so.4  libisoburn.so.1  libisofs.so.6  libjte.so.1  xorriso
binary-dependencies/i386/: libisofs.so.6
binary-dependencies/i686/: README  unionfs-fuse
binary-dependencies/x86_64/: README  libburn.so.4  libglade-2.0.so.0  libisoburn.so.1  libisofs.so.6  libvte.so.9  xorriso
bundled-dependencies-i386/: libglade-2.0.so.0  libisoburn.so.1  libvte.so.9  xorriso
ci/: build-appdir.sh  build-appimage.sh  build-binaries-and-appimage.sh  build-in-docker.sh  build.sh  ci-build.sh  test-appimage.sh  test-appimagetool.sh
cmake/: AppImageKitConfig.cmake.in  AppImageKitConfigVersion.cmake.in  FindINotify.cmake  build-runtime.sh  cpack_debs.cmake  dependencies.cmake  tools.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  i386-linux-gnu.cmake
css/: landing-page.css  montserrat-webfont.min.css
depgraph/: README.md  dependency-graph.sh
docker/: nginx.conf
docker/AppImageKit-x86/: Dockerfile
docker/AppImageKit-x86_64/: Dockerfile
fonts/: montserrat-bold-webfont.eot
include/appimage/: appimage.h  libappimage.h
js/: SmoothScroll.js
lib/: CMakeLists.txt
libappimage/: CMakeLists.txt  libappimage.h  test_appimagelib.cpp
libappimage/cmake/: AppImageConfig.cmake.in  AppImageConfigVersion.cmake.in  ConfigureDeploy.cmake  ImportedTargets.cmake  cmake_import_manual_targets.cmake  cmake_make_absolute_paths.cmake  cmake_setup_cmake_module.cmake  cmake_uninstall.cmake.in
libappimage/src/: CMakeLists.txt  appimage.h
libappimage/test/: CMakeLists.txt  test_appimagelib.cpp  test_libappimage.cpp
libappimage/test/data/: AppImageExtract_6-x86_64.AppImage  Echo-x86_64.AppImage
linux/: iso_fs.h  rock.h
locale/ast/LC_MESSAGES/: messages.po
locale/cs/LC_MESSAGES/: messages.po
locale/de/LC_MESSAGES/: messages.po
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/es/LC_MESSAGES/: messages.po
locale/fr/LC_MESSAGES/: messages.po
locale/nl/LC_MESSAGES/: messages.po
locale/pl/LC_MESSAGES/: messages.po
locale/pt/LC_MESSAGES/: messages.po
locale/pt_BR/LC_MESSAGES/: messages.po
locale/zh/LC_MESSAGES/: messages.po
locale/zh_Hant/LC_MESSAGES/: messages.po
mock-appdir/: README.md  mock-appdir  portability.py
pkgconfig/: liblz4.pc
resources/: AppRun  appimaged.desktop  appimaged.service  appimagetool.desktop  pubkey.asc
resources/usr/share/metainfo/: appimaged.appdata.xml  appimagetool.appdata.xml
ressources/: appimagetool.desktop
sandbox/: README.md  loopmounter.c  package.sh
sandbox/src/: runappimage
sandbox/src/usr/: loopmounter.c
sandbox/src/usr/share/applications/: runappimage.desktop
squashfuse-patches/: Makefile.am.patch  ll.c.patch
src/: AppRun.c  CMakeLists.txt  appimaged.c  appimagetool.c  appimagetool_shared.c  appimagetool_sign.c  appimagetool_sign.h  appimagetoolnoglib.c  binreloc.c  binreloc.h  build-runtime.cmake  build-runtime.sh.in  digest.c  digest_md5.c  elf.c  elf.h  embed-magic-bytes-in-file.sh  getsection.c  getsection.h  hexlify.c  light_elf.h  md5.c  md5.h  mksquashfs-build-fix.patch  mksquashfs-mkfs-fixed-timestamp.patch  patch-squashfuse.sh.in  runtime.c  shared.c  shared.h  validate.c
src/xdg-basedir/: CMakeLists.txt  test-xdg-basedir.cpp  xdg-basedir.c  xdg-basedir.h
tests/: CMakeLists.txt  fixtures.h  test_getsection.cpp  test_libappimage.cpp  test_shared.cpp
tests/data/: AppImageExtract_6-x86_64.AppImage  Cura.desktop  Echo-no-integrate-x86_64.AppImage  Echo-test1234-x86_64.AppImage  Echo-x86_64-no_display.AppImage  Echo-x86_64.AppImage  appimaged-i686.AppImage  appimaged-x86_64.AppImage  appimagetool-x86_64.AppImage
tests/data/squashfs-root/: .DirIcon  AppRun  echo.desktop
third-party-dependencies/: CMakeLists.txt
travis/: build-appimage.sh  build-appimages.sh  build-binaries.sh  build-packages-and-appimages.sh  build.sh  test-appimage.sh  test-appimages.sh  travis-build.sh
www/: .gitignore
www/css/: appimage.org.css  fa-brands.min.css  fa-regular.min.css  fa-solid.min.css  fontawesome-all.min.css  landing-page.css
www/fonts/: montserrat-regular-webfont.eot
www/js/: appimage.org.js
(+2 files in other folders)
